fix(VStepper): align title and subtitle to the avatar
fixes #21884

--- a/packages/vuetify/src/components/VStepper/VStepperItem.sass
+++ b/packages/vuetify/src/components/VStepper/VStepperItem.sass
@@ -63,9 +63,8 @@
       margin-bottom: $stepper-item-alt-labels-margin-bottom
       margin-inline-end: 0
 
-  //.v-stepper-item__content
-  //  .v-stepper--alt-labels &
-  //    min-height: 28px
+  .v-stepper-item__content
+    text-align: start
 
   .v-stepper-item__title
     line-height: $stepper-item-title-line-height
@@ -75,7 +74,6 @@
 
   .v-stepper-item__subtitle
     font-size: $stepper-item-subtitle-font-size
-    text-align: left
     line-height: $stepper-item-subtitle-line-height
     opacity: $stepper-item-subtitle-opacity
 
